--- a/public/css/style.css
+++ b/public/css/style.css
@@ -24,8 +24,6 @@ html, body {
 	margin: 0;
 	padding: 0;
 	height: 100%;
-	/*background: #f1f7ee;*/
-	/*background-color: #ffffff;*/
 	background-color: #ebebe7;
 }
 
@@ -60,7 +58,7 @@ h1 , .h1{
 }
 
 #body {
-	padding-bottom: 80px;   /* Height of the footer + extra space above footer */
+	padding-bottom: 100px;   /* Height of the footer + extra space above footer */
 }
 
 #footer {
@@ -68,8 +66,7 @@ h1 , .h1{
 	bottom: 0;
 	right: 0;
 	left: 0;
-	height: 40px;   /* Height of the footer */
-	/*background: #ffffff;*/
+	height: 60px;   /* Height of the footer */
 	background-color: #fefefa;
 	padding-top: 10px;
 
@@ -143,7 +140,8 @@ div.leather-item:hover > div.popup {
 }
 
 .title-bar-right a{
-	margin-left:20px;
+	margin-left:10px;
+	margin-right:10px;
 	font-size:1.2em;
 }
 
