--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,7 +6,8 @@
 
 	--lt-grey: #cececa;
 	--md-grey: #aeaeaa;
-	--black: #323232;
+	--dk-grey: #6e6e6a;
+	--black: #3e3e3a;
 
 	--lt-green: #a3b16c;
 	--md-green: #91a055;
@@ -15,6 +16,8 @@
 	--lt-blue: #8fd5d3;
 	--md-blue: #68acaa;
 	--dk-blue: #2d4244;
+
+	--footer-height: 100px;
 }
 
 
@@ -54,14 +57,14 @@ h1, h2, h2, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 }
 
 h1 , .h1{
-	margin-top:50px;
+	margin-top:40px;
 	margin-bottom:40px;
 }
 
  /* layout */
 
 #body {
-	padding-bottom: 100px;   /* Height of the footer + extra space above footer */
+	padding-bottom: calc(var(--footer-height) + 40px);   /* Height of the footer + extra space above footer */
 }
 
 #footer {
@@ -70,7 +73,7 @@ h1 , .h1{
 	bottom: 0;
 	right: 0;
 	left: 0;
-	height: 60px;   /* Height of the footer */
+	height: var(--footer-height);   /* Height of the footer */
 	padding-top: 10px;
 }
 
@@ -152,6 +155,8 @@ span.price{
 	padding-right:20px;
 }
 
+/* Secondary Button (White) */
+
 a.btn.btn-secondary.square{
 	padding: 15px 20px;
 	background-color: var(--white);
@@ -175,15 +180,21 @@ a.btn.btn-secondary.square.active{
 	box-shadow: none;
 }
 
+a.btn.btn-secondary.square:hover{
+	background-color:var(--lt-grey);
+	background-color:var(--md-green);
+	color:var(--black);
+}
+
+/* PRIMARY BUTTON (Green) */
 .btn.btn-primary.square{
 	text-transform: uppercase;
-
 	padding: 15px 20px;
 	background-color: var(--lt-green);
-	color:var(--black);
+	color:var(--white);
 
 	border:none;
-	border-bottom: 1px solid var(--md-grey);
+	border-bottom: 1px solid var(--dk-green);
 	border-radius: 0px;
 	margin-right:5px;
 	margin-bottom:10px;
@@ -191,12 +202,12 @@ a.btn.btn-secondary.square.active{
     transition: background-color 0.8s;
 }
 
-
-a.btn.btn-secondary.square:hover{
+.btn.btn-primary.square:hover{
 	background-color:var(--lt-grey);
 	background-color:var(--md-green);
-	color:var(--black);
+	color:var(--white);
 }
+
 
 /*select2*/
 .select2-dropdown.select2-dropdown--below{
@@ -259,6 +270,15 @@ div.flag {
 	letter-spacing: 1px;
 
 }
+
+div.shift-down {
+	color:red;
+}
+
+.text-md-grey {
+	color: var(--md-grey);
+}
+
 @media only screen and (max-width: 512px) {
 	div.flag{
 		width: 25%;
@@ -278,8 +298,15 @@ div.flag {
 
 
 /*extra spacing*/
+.mr10 {
+
+	margin-right:10px;
+}
 .mt0 {
 	margin-top:0px;
+}
+.mt5 {
+	margin-top:5px;
 }
 .mt10 {
 	margin-top:10px;
