tweaking banner image styles

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -273,11 +273,11 @@ div.row.checkout {
 
     /* Create the parallax scrolling effect */
     background-attachment: fixed;
-    /*background-position: fixed;*/
+    background-position: fixed;
 
-    background-position: center;
+    /*background-position: center;*/
     background-repeat: no-repeat;
-    /*background-size: cover;*/
+    background-size: cover;
 
     position: relative;
 }
