--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,18 +6,27 @@
 
 	--lt-grey: #cececa;
 	--md-grey: #aeaeaa;
-	--dk-grey: #6e6e6a;
+	--dk-grey: #7e7e7a;
 	--black: #3e3e3a;
 
 	--lt-green: #a3b16c;
 	--md-green: #91a055;
 	--dk-green: #4c542c;
 
+	--lt-alert-success: hsl(145, 61%, 80%);
+	--md-alert-success: hsl(145, 61%, 30%);
+	--lg-alert-success: hsl(145, 61%, 15%);
+
+	--lt-alert-danger: hsl(355, 61%, 91%);
+	--md-alert-danger: hsl(355, 61%, 30%);
+	--lg-alert-danger: hsl(355, 61%, 15%);
+
 	--lt-blue: #8fd5d3;
 	--md-blue: #68acaa;
 	--dk-blue: #2d4244;
 
 	--footer-height: 100px;
+	--bb-width: 2px;
 }
 
 
@@ -26,16 +35,18 @@ html, body {
 	background-color: var(--offwhite);
 	color: var(--black);
 	text-transform:uppercase;
-	font-size: 14px;
+	font-size: 16px;
 	margin: 0;
 	padding: 0;
 	height: 100%;
 }
 
 p {
+	font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
 	text-transform: none;
 	line-height: 1.8em;
 	font-size: 1.1em;
+	color: var(--dk-grey);
 }
 
 a {
@@ -54,7 +65,6 @@ a:hover {
 }
 
 h1, h2, h2, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
-
 }
 
 h1 , .h1{
@@ -101,7 +111,51 @@ span.social a{
 	z-index: 2;
  }
 
+/* custom alert messages */
 
+.alert {
+	padding-top:30px;
+	padding-bottom:30px;
+ 	border-radius: 0px;
+	margin-bottom:0px;
+	border: none;
+	border-bottom-style: solid;
+	border-bottom-width: var(--bb-width);
+}
+
+.alert p{
+	margin-bottom: 0px;
+}
+
+.alert-success svg *{
+	fill:var(--md-alert-success);
+}
+.alert-success p{
+	margin-bottom: 0px;
+	color:var(--dk-alert-success);
+}
+.alert.alert-success {
+	background-color: var(--lt-alert-success);
+	background-image: url("data:image/svg+xml,%3Csvg width='60' height='60' viewBox='0 0 60 60' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%231e7b45' fill-opacity='0.16'%3E%3Cpath d='M36 34v-4h-2v4h-4v2h4v4h2v-4h4v-2h-4zm0-30V0h-2v4h-4v2h4v4h2V6h4V4h-4zM6 34v-4H4v4H0v2h4v4h2v-4h4v-2H6zM6 4V0H4v4H0v2h4v4h2V6h4V4H6z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+	color: var(--dk-alert-success);
+	border-bottom-color: var(--md-alert-success);
+}
+
+
+.alert-danger svg *{
+	fill:var(--md-alert-danger);
+}
+.alert-danger p{
+	margin-bottom: 0px;
+	color:var(--dk-alert-danger);
+}
+.alert.alert-danger {
+	background-color: var(--lt-alert-danger);
+	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%237b1e24' fill-opacity='0.1'%3E%3Cpath d='M0 38.59l2.83-2.83 1.41 1.41L1.41 40H0v-1.41zM0 1.4l2.83 2.83 1.41-1.41L1.41 0H0v1.41zM38.59 40l-2.83-2.83 1.41-1.41L40 38.59V40h-1.41zM40 1.41l-2.83 2.83-1.41-1.41L38.59 0H40v1.41zM20 18.6l2.83-2.83 1.41 1.41L21.41 20l2.83 2.83-1.41 1.41L20 21.41l-2.83 2.83-1.41-1.41L18.59 20l-2.83-2.83 1.41-1.41L20 18.59z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+	background-color: var(--lt-alert-danger);
+	color: var(--dk-alert-danger);
+	border-color: var(--md-alert-danger);
+}
 
  /* navbar */
 
@@ -169,7 +223,7 @@ span.price{
 	color:var(--black);
 
 	border:none;
-	border-bottom: 1px solid var(--md-grey);
+	border-bottom: var(--bb-width) solid var(--md-grey);
 	border-radius: 0px;
 	margin-right:5px;
 	margin-bottom:10px;
@@ -182,7 +236,7 @@ span.price{
 	color:var(--black);
 
 	border:none;
-	border-bottom:1px solid var(--md-grey);
+	border-bottom:var(--bb-width) solid var(--md-grey);
 	box-shadow: none;
 }
 
@@ -200,7 +254,7 @@ span.price{
 	color:var(--white);
 
 	border:none;
-	border-bottom: 1px solid var(--dk-green);
+	border-bottom: var(--bb-width) solid var(--dk-green);
 	border-radius: 0px;
 	margin-right:5px;
 	margin-bottom:10px;
@@ -219,13 +273,13 @@ span.price{
 .select2-dropdown.select2-dropdown--below{
     border-radius: 0px;
     border: none;
-    border-bottom: 1px solid var(--md-grey);
+    border-bottom: var(--bb-width) solid var(--md-grey);
 }
 
 .select2-container--default .select2-selection--single{
     border-radius: 0px;
     border: none;
-    border-bottom: 1px solid var(--md-grey);
+    border-bottom: var(--bb-width) solid var(--md-grey);
     padding:20px;
 }
 
@@ -239,13 +293,13 @@ span.price{
 
 
 input.form-control {
-	padding:10px;
+	padding:15px 20px;
 	border-radius:0px;
     border: 1px solid var(--md-grey);
 }
 
 textarea.form-control {
-	padding:10px;
+	padding:15 20px;
 	border-radius:0px;
     border: 1px solid var(--md-grey);
 }
@@ -279,7 +333,7 @@ div.row.checkout {
 }
 
 .border-bottom {
-	border-bottom:1px solid var(--md-grey);
+	border-bottom: var(--bb-width) solid var(--md-grey);
 }
 
 /* Home Banner */
