--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,11 +26,14 @@
 
 	--footer-height: 100px;
 	--bb-width: 2px;
+
+	--font-1: 'Raleway',sans-serif;
+	--font-2: 'Roboto','Helvetica Neue',sans-serif;
 }
 
 
 html, body {
-	font-family: 'Raleway',sans-serif;
+	font-family: var(--font-1);
 	background-color: var(--offwhite);
 	color: var(--dk-black);
 	text-transform:uppercase;
@@ -41,7 +44,7 @@ html, body {
 }
 
 p {
-	font-family: 'Roboto','Helvetica Neue',sans-serif;
+	font-family: var(--font-2);
 	text-transform: none;
 	line-height: 1.8em;
 	font-size: 1.1em;
@@ -178,8 +181,8 @@ div.popup {
 	left:15px;
 	max-height:0px;
 	color:transparent;
-	-webkit-transition: all 0.8s ease;
-    transition: all 0.8s ease;
+	-webkit-transition: all 0.4s ease;
+    transition: all 0.4s ease;
 	/*opacity: 0.7;*/
 }
 
@@ -202,6 +205,27 @@ div.leather-item:hover > div.popup {
 span.price{
 	color:var(--md-green);
 	margin-right:20px;
+}
+
+.dollar {
+	font-family: var(--font-2);
+	color: var(--md-black);
+	font-size: 1.1em;
+	font-weight: 200;
+}
+
+.font-2 {
+	font-family: var(--font-2);
+	color: var(--md-black);
+	font-size: 1.1em;
+	font-weight: 200;
+	text-transform: none;
+}
+
+address.address {
+	padding:20px;
+	background-color: var(--offwhite);
+	border-bottom: 2px solid var(--lt-grey);
 }
 
 /*leather nav*/
@@ -227,8 +251,8 @@ span.price{
 	border-radius: 0px;
 	margin-right:5px;
 	margin-bottom:10px;
-	-webkit-transition: background-color 0.8s;
-    transition: background-color 0.8s;
+	-webkit-transition: all 0.4s;
+    transition: all 0.4s;
 }
 
 .btn.btn-secondary.square.active{
@@ -251,15 +275,17 @@ span.price{
 	text-transform: uppercase;
 	padding: 15px 20px;
 	background-color: var(--lt-green);
-	color:var(--white);
+	color:var(--dk-green);
+	letter-spacing: 0.1em;
+	font-weight: 600;
 
 	border:none;
 	border-bottom: var(--bb-width) solid var(--dk-green);
 	border-radius: 0px;
 	margin-right:5px;
 	margin-bottom:10px;
-	-webkit-transition: background-color 0.8s;
-    transition: background-color 0.8s;
+	-webkit-transition: all 0.4s;
+    transition: all 0.4s;
 }
 
 .btn.btn-primary.square:hover{
@@ -291,17 +317,18 @@ span.price{
 	margin-top: 5px;
 }
 
-
-input.form-control {
+input.form-control, textarea.form-control {
+	font-family: var(--font-2);
+	font-size: 16px;
+	font-weight: 400;
+	color: var(--dk-black);
 	padding:15px 20px;
 	border-radius:0px;
     border: 1px solid var(--md-grey);
 }
 
-textarea.form-control {
-	padding:15 20px;
-	border-radius:0px;
-    border: 1px solid var(--md-grey);
+.form-group {
+	margin-bottom: 20px;
 }
 
 /* Custom for Slick Slider */
@@ -323,16 +350,13 @@ textarea.form-control {
 	cursor: zoom-in;
 }
 
-.checkout-item {
-	background-color: var(--white);
-}
-
-div.row.checkout {
-	background-color: var(--white);
-	padding: 20px;
-}
-
 .border-bottom {
+	border-bottom: var(--bb-width) solid var(--md-grey);
+}
+
+.box {
+	padding: 20px;
+	background-color: var(--white);
 	border-bottom: var(--bb-width) solid var(--md-grey);
 }
 
@@ -379,6 +403,10 @@ div.row.checkout {
 	color: var(--white);
 	font-size: 2em;
 	text-shadow: 0px 2px 0 black;
+}
+
+.font-2 {
+	font-family: var(--font-2)
 }
 
 .text-md-grey {
