--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,9 +12,9 @@
 	--md-black: hsl(60, 3%, 34%);
 	--dk-black: hsl(60, 3%, 22%);
 
-	--lt-green: hsl(72, 36%, 60%);
-	--md-green: hsl(72, 36%, 44%);
-	--dk-green: hsl(72, 36%, 25%);
+	--lt-green: hsl(72, 36%, 60%); /* AFBE74 */
+	--md-green: hsl(72, 36%, 44%); /* 889948*/
+	--dk-green: hsl(72, 36%, 25%); /* 4E5729 */
 
 	--lt-alert-success: hsl(145, 61%, 80%);
 	--md-alert-success: hsl(145, 61%, 30%);
@@ -139,8 +139,6 @@ span.social a{
 }
 .alert.alert-success {
 	background-color: var(--white);
-	/*background-image: url("data:image/svg+xml,%3csvg width='60' height='60' viewbox='0 0 60 60' xmlns='http://www.w3.org/2000/svg'%3e%3cg fill='none' fill-rule='evenodd'%3e%3cg fill='%231e7b45' fill-opacity='0.16'%3e%3cpath d='m36 34v-4h-2v4h-4v2h4v4h2v-4h4v-2h-4zm0-30v0h-2v4h-4v2h4v4h2v6h4v4h-4zm6 34v-4h4v4h0v2h4v4h2v-4h4v-2h6zm6 4v0h4v4h0v2h4v4h2v6h4v4h6z'/%3e%3c/g%3e%3c/g%3e%3c/svg%3e");*/
-	/*color: var(--dk-alert-success);*/
 	border-bottom-color: var(--md-alert-success);
 }
 
@@ -153,11 +151,8 @@ span.social a{
 	color:var(--dk-alert-danger);
 }
 .alert.alert-danger {
-	background-color: var(--lt-alert-danger);
-	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%237b1e24' fill-opacity='0.1'%3E%3Cpath d='M0 38.59l2.83-2.83 1.41 1.41L1.41 40H0v-1.41zM0 1.4l2.83 2.83 1.41-1.41L1.41 0H0v1.41zM38.59 40l-2.83-2.83 1.41-1.41L40 38.59V40h-1.41zM40 1.41l-2.83 2.83-1.41-1.41L38.59 0H40v1.41zM20 18.6l2.83-2.83 1.41 1.41L21.41 20l2.83 2.83-1.41 1.41L20 21.41l-2.83 2.83-1.41-1.41L18.59 20l-2.83-2.83 1.41-1.41L20 18.59z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
-	background-color: var(--lt-alert-danger);
-	color: var(--dk-alert-danger);
-	border-color: var(--md-alert-danger);
+	background-color: var(--white);
+	border-bottom-color: var(--md-alert-danger);
 }
 
  /* navbar */
@@ -343,8 +338,12 @@ input.form-control, textarea.form-control {
 	font-weight: bold;
 }
 .slick-slide {
-	width:140px;
-	padding: 5px;
+	width:110px;
+	padding: 8px;
+}
+
+#large-slider .slick-slide {
+	padding: 0px;
 }
 .cursor-zoom-in:hover {
 	cursor: zoom-in;
@@ -405,8 +404,31 @@ input.form-control, textarea.form-control {
 	text-shadow: 0px 2px 0 black;
 }
 
+.sm-banner-image {
+	max-height: 25vh;
+	object-fit:cover;
+	max-width: 100vw;
+	width: 100vw;
+	margin: 0 calc(-50vw + 50%);
+}
+
 .font-2 {
 	font-family: var(--font-2)
+}
+.green-box {
+	background-color: var(--lt-green);
+	border-bottom: var(--bb-width) solid var(--md-green);
+}
+
+.textured-bg {
+background-color: #afbe74;
+background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='88' height='24' viewBox='0 0 88 24'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='autumn' fill='%23889948' fill-opacity='0.20'%3E%3Cpath d='M10 0l30 15 2 1V2.18A10 10 0 0 0 41.76 0H39.7a8 8 0 0 1 .3 2.18v10.58L14.47 0H10zm31.76 24a10 10 0 0 0-5.29-6.76L4 1 2 0v13.82a10 10 0 0 0 5.53 8.94L10 24h4.47l-6.05-3.02A8 8 0 0 1 4 13.82V3.24l31.58 15.78A8 8 0 0 1 39.7 24h2.06zM78 24l2.47-1.24A10 10 0 0 0 86 13.82V0l-2 1-32.47 16.24A10 10 0 0 0 46.24 24h2.06a8 8 0 0 1 4.12-4.98L84 3.24v10.58a8 8 0 0 1-4.42 7.16L73.53 24H78zm0-24L48 15l-2 1V2.18A10 10 0 0 1 46.24 0h2.06a8 8 0 0 0-.3 2.18v10.58L73.53 0H78z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+}
+
+.full-width {
+	max-width: 100vw;
+	width: 100vw;
+	margin: 0 calc(-50vw + 50%);
 }
 
 .text-md-grey {
