New process section
resized images on home page, alt property on home page images

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -481,6 +481,9 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 .mt20 {
 	margin-top:20px;
 }
+.mt30 {
+	margin-top:30px;
+}
 .mt40 {
 	margin-top:40px;
 }
