Adding price to available items, sorting items better, ignoring images

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -168,6 +168,14 @@ div.leather-item {
 	margin-bottom:15px;
 }
 
+div.leather-price {
+	position:absolute;
+	top:5px;
+	right:20px;
+	color: var(--black);
+	font-weight: bold;
+}
+
 div.popup {
 	background-color: var(--white);
 	position:absolute;
